--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -22,10 +22,10 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Set up Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install docker-compose-plugin
+    # - name: Set up Docker Compose
+    #   run: |
+    #     sudo apt-get update
+    #     sudo apt-get install docker-compose-plugin
 
     - name: Build and run app with Docker Compose
       run: 
